# emulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-clangtron-windows.bat  build-clangtron-windows.sh  pgo-build.ps1  pgo-build.sh  vcpkg.json
CMakeModules/: CopyCitronFFmpegDeps.cmake  CopyCitronQt6Deps.cmake  CopyMinGWDeps.cmake  PGO.cmake
docs/: BUILDING-CLANGTRON-WINDOWS.md
src/: CMakeLists.txt
src/android/: build.gradle.kts  gradle.properties  settings.gradle.kts
src/android/app/: build.gradle.kts
src/android/app/src/main/jni/: native.cpp
src/audio_core/: audio_manager.cpp  audio_manager.h
src/audio_core/adsp/apps/audio_renderer/: audio_renderer.h
src/audio_core/sink/: sink_stream.cpp  sink_stream.h
src/citron/: CMakeLists.txt  Info.plist  about_dialog.cpp  about_dialog.h  aboutdialog.ui  bootmanager.cpp  citron.qrc  game_details_panel.cpp  game_grid_delegate.cpp  game_list.cpp  game_list.h  game_list_delegate.cpp  game_list_delegate.h  game_list_loading_overlay.cpp  game_list_loading_overlay.h  hotkey_profile_manager.cpp  hotkey_profile_manager.h  hotkeys.cpp  main.cpp  main.h  main.ui  qt_common.cpp  setup_wizard.cpp  setup_wizard_page.cpp  setup_wizard_page.h  startup_checks.cpp  startup_checks.h  uisettings.cpp  uisettings.h
src/citron/applets/: qt_controller.cpp  qt_controller.h
src/citron/configuration/: configuration_shared.cpp  configuration_shared.h  configuration_styling.h  configure_dialog.cpp  configure_dialog.h  configure_graphics.cpp  configure_graphics.h  configure_graphics.ui  configure_hotkeys.cpp  configure_hotkeys.h  configure_input.cpp  configure_input_player.cpp  configure_input_player.h  configure_input_player_widget.cpp  configure_motion_touch.cpp  configure_per_game.cpp  configure_per_game.h  configure_per_game.ui  configure_per_game_addons.cpp  configure_per_game_addons.h  configure_per_game_addons.ui  configure_per_game_cheats.cpp  configure_per_game_cheats.h  shared_translation.cpp  shared_translation.h  style_animation_event_filter.cpp  style_animation_event_filter.h
src/citron/mod_manager/: gamebanana_dialog.cpp  gamebanana_dialog.h  gamebanana_dialog.ui
src/citron/ui/: animated_menu.cpp  animated_menu.h  game_carousel_view.cpp  game_carousel_view.h  game_grid_view.cpp  game_grid_view.h
src/citron/updater/: updater_dialog.cpp  updater_dialog.h
src/citron/util/: controller_navigation.cpp  performance_overlay.cpp  title_ids.h
src/citron_cmd/: CMakeLists.txt
src/common/: CMakeLists.txt  address_space.inc  fiber.cpp  host_memory.cpp  logging.cpp  page_table.cpp  page_table.h  settings.cpp  settings.h  settings_enums.h  settings_input.h  socket_types.h  thread.h
src/core/: CMakeLists.txt  core.cpp  core.h  device_memory_manager.h  device_memory_manager.inc  memory.cpp  perf_stats.cpp  reporter.cpp  telemetry_session.cpp
src/core/arm/dynarmic/: arm_dynarmic_32.cpp  arm_dynarmic_64.cpp
src/core/arm/nce/: interpreter_visitor.cpp
src/core/file_sys/: common_funcs.h  control_metadata.cpp  control_metadata.h  fs_path_normalizer.h  patch_manager.cpp  registered_cache.cpp  registered_cache.h
src/core/file_sys/vfs/: vfs_real.cpp
src/core/hle/kernel/: k_light_lock.cpp  k_page_table_base.cpp  k_page_table_base.h  svc_types.h
src/core/hle/kernel/svc/: svc_exception.cpp  svc_info.cpp
src/core/hle/service/: hle_ipc.cpp
src/core/hle/service/am/: applet_manager.cpp
src/core/hle/service/am/service/: home_menu_functions.cpp  home_menu_functions.h  library_applet_accessor.cpp  (+4 more)
src/core/hle/service/audio/: audio_in.cpp  audio_system_manager.h
src/core/hle/service/grc/: grc.cpp
src/core/hle/service/jit/: jit_context.cpp
src/core/hle/service/ns/: ns_types.h
src/core/hle/service/nvdrv/: nvdrv_interface.cpp
src/core/hle/service/nvnflinger/: buffer_queue_consumer.cpp  buffer_queue_core.cpp  buffer_queue_core.h  buffer_queue_producer.cpp  buffer_queue_producer.h  buffer_slot.h  display.h  hardware_composer.cpp  hos_binder_driver.cpp  hos_binder_driver.h  hwc_layer.h  surface_flinger.cpp  surface_flinger.h
src/core/hle/service/sockets/: bsd.cpp  bsd.h  sockets.h  sockets_translate.cpp
src/core/hle/service/ssl/: ssl.cpp
src/core/hle/service/vi/: application_display_service.cpp  container.cpp  container.h
src/core/internal_network/: network.cpp  network.h  socket_proxy.cpp  sockets.h
src/core/memory/: cheat_engine.cpp
src/dedicated_room/: CMakeLists.txt
src/hid_core/frontend/: emulated_controller.cpp
src/hid_core/resources/npad/: npad.cpp
src/input_common/: CMakeLists.txt
src/input_common/drivers/: sdl_driver.cpp  sdl_driver.h
src/shader_recompiler/: CMakeLists.txt  runtime_info.h
src/shader_recompiler/backend/spirv/: emit_spirv.cpp  emit_spirv.h  emit_spirv_context_get_set.cpp  emit_spirv_image.cpp  spirv_emit_context.cpp  spirv_emit_context.h
src/shader_recompiler/frontend/maxwell/: decode.cpp  maxwell.inc  opcodes.cpp  opcodes.h  structured_control_flow.cpp
src/shader_recompiler/frontend/maxwell/translate/: translate.cpp
src/shader_recompiler/ir_opt/: texture_pass.cpp
src/video_core/: CMakeLists.txt  framebuffer_config.h  gpu_thread.cpp  renderer_base.h  shader_environment.cpp  video_core.cpp
src/video_core/buffer_cache/: buffer_cache.h  buffer_cache_base.h
src/video_core/engines/: maxwell_dma.cpp
src/video_core/host1x/: gpu_device_memory_manager.cpp
src/video_core/host_shaders/: CMakeLists.txt  astc_decoder.comp  block_linear_unswizzle_3d_bcn.comp
src/video_core/macro/: macro_jit_x64.cpp
src/video_core/renderer_vulkan/: fixed_pipeline_state.cpp  fixed_pipeline_state.h  renderer_vulkan.cpp  vk_buffer_cache.cpp  vk_buffer_cache.h  vk_graphics_pipeline.cpp  vk_pipeline_cache.cpp  vk_pipeline_cache.h  vk_query_cache.cpp  vk_rasterizer.cpp  vk_swapchain.cpp
src/video_core/renderer_vulkan/present/: util.cpp  window_adapt_pass.cpp
src/video_core/texture_cache/: descriptor_table.h  image_base.h  texture_cache.h  types.h  util.cpp
src/video_core/vulkan_common/: vulkan_device.cpp  vulkan_memory_allocator.cpp  vulkan_surface.cpp
src/web_service/: web_backend.cpp
(+40 files in other folders)
